# ffmpeg4android

./: build.gradle  config.gradle  gradle.properties  module.gradle  settings.gradle
common/: build.gradle
ffmpeg-audio-encode/: CMakeLists.txt
ffmpeg-audio-encode/src/main/: AndroidManifest.xml
ffmpeg-audio-encode/src/main/cpp/: encode_aac.cpp
ffmpeg-audio-encode/src/main/java/com/onzhou/audio/main/: AudioEncodeActivity.java
ffmpeg-camera-encode/: build.gradle
ffmpeg-camera-encode/src/main/: AndroidManifest.xml
ffmpeg-single/: build.gradle
ffmpeg-single/src/main/: AndroidManifest.xml
libyuv-single/: build.gradle
